# hexagoon-Postgres

./: .dockerignore  .gcloudignore  .gitignore  .secrets_example.toml  Dockerfile  app.yaml  config.py  main.py  pyproject.toml  readme.md  requirements.txt  settings.toml
api/v1/artigo/acoes/: artigo_acoes.py
api/v1/artigo/endpoint/: artigo_endpoints.py
api/v1/artigo/excecoes/: artigo_exceptions.py
api/v1/artigo/model/: artigo_model.py
api/v1/artigo/regras/: artigo_regras.py
api/v1/as_role_precedencia/acoes/: as_role_precedencia.py
api/v1/as_role_precedencia/endpoint/: __init__.py  as_role_precedencia_endpoints.py
api/v1/as_role_precedencia/excecoes/: as_role_precedencia.py
api/v1/as_role_precedencia/model/: as_role_precedencia.py
api/v1/recursos/: acoes_initiallizer.py  excecao_model.py  regras_initiallizer.py  response_handler.py
banco_dados/sql_alchemy/: load_data.py
banco_dados/sql_alchemy/configuracao/: data_schema.py
estaticos/: __init__.py
estaticos/js/: artigo.js  login.js  testeCorreto.js  usuarios.js
extrator/: migrar_sql_mongo.py
logger/: gcp_logger.py
templates/: Jinja2.py  base_artigos.html  login.html  usuarios.html
templates/artigos/: artigo_individual.html  landing_page_artigos.html
testes/: conftest.py  teste.http
testes/config/: test_config.py
testes/data_fixtures/: test_data_base.py
testes/endpoints/: test_artigo_endpoints.py  test_as_role_precedencia_endpoints.py  test_as_usuario_role_endpoints.py  test_autenticacao_endpoints.py  test_role_endpoints.py  test_usuario_endpoints.py
(+30 files in other folders)
